Datamart Dockerfile added (it was hard to find JAVA_TOOL_OPTIONS solution), datamart docker_compose added